--- a/react_ws_src/src/sass/main.scss
+++ b/react_ws_src/src/sass/main.scss
@@ -79,7 +79,8 @@ a {
 ////////////////////////////////////////////////////////////////////// MAIN CONTENT
 section#main_content {
 	position: relative;
-	height:100%;
+	height:calc(100vh - 50px);
+	overflow-y: auto;
 }
 
 ////////////////////////////////////////////////////////////////////// FOOTER
