add Redux and middleware logging; show scores - total of wins, losses, draws; add logout; persist game state in localStorage

--- a/react_ws_src/src/sass/ttt.scss
+++ b/react_ws_src/src/sass/ttt.scss
@@ -128,6 +128,13 @@ section#TTT_game{
 		}
 	}
 
+	#scores {
+		background-color: #ebe6f1;
+		margin-top: 8px;
+		th, td {
+			padding: 8px;
+		}
+	}
 	#game_board {
 			// padding: 10px;
 
