show logs for admin

--- a/react_ws_src/src/sass/ttt.scss
+++ b/react_ws_src/src/sass/ttt.scss
@@ -135,6 +135,11 @@ section#TTT_game{
 			padding: 8px;
 		}
 	}
+
+	#AdminLogs {
+		margin-top: 32px;
+	}
+
 	#game_board {
 			// padding: 10px;
 
